--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,6 @@
           <option value="Finance">Finance</option>
           <option value="Travel & Adventure">Travel & Adventure</option>
           <option value="Relationships">Relationships</option>
-          <option value="Chess Practice">Chess Practice</option>
           <option value="Home & Living">Home & Living</option>
           <option value="Personal Projects">Personal Projects</option>
           <option value="Learning & Curiosity">Learning & Curiosity</option>
@@ -51,7 +50,7 @@
 
       <!-- ETA Input -->
       <div class="form-group">
-        <label for="taskETA">ETA:</label>
+        <label for="taskETA">End Date:</label>
         <input type="date" id="taskETA" placeholder="ETA">
       </div>
 
@@ -64,27 +63,25 @@
       <button type="submit"><i class="fas fa-save"></i> Save Task</button>
     </form>
 
-    <!-- Show Tasks and Hide Tasks Buttons -->
-    <button id="show-tasks-button">Show Tasks</button>
-    <button id="hide-tasks-button" style="display: none;">Hide Tasks</button>
+
+
+    <div id="button-container">
+      <button id="show-tasks-button">Show Tasks</button>
+      <button id="hide-tasks-button" style="display: none;">Hide Tasks</button>
+      <button id="show-completed-button">Show Completed Tasks</button>
+      <button id="hide-completed-button" style="display: none;">Hide Completed Tasks</button>
+      <button id="show-summary-button">Show Summary</button>
+      <button id="hide-summary-button" style="display: none;">Hide Summary</button>
+    </div>
 
     <!-- Task List Section -->
     <div id="task-list" class="task-sections" style="display: none;"></div>
-
-    <!-- Add the buttons to show/hide completed tasks -->
-    <button id="show-completed-button">Show Completed Tasks</button>
-    <button id="hide-completed-button" style="display: none;">Hide Completed Tasks</button>
-
+    
     <!-- Completed Tasks History Section -->
     <div id="completed-task-section" style="display: none;">
       <h3>Completed Tasks History</h3>
       <div id="completed-task-list" class="task-sections"></div>
     </div>
-
-    <!-- Add the buttons to show/hide summary -->
-    <button id="show-summary-button">Show Summary</button>
-    <button id="hide-summary-button" style="display: none;">Hide Summary</button>
-
     <!-- Summary Section -->
     <div id="summary-section" class="task-sections" style="display: none;">
       <h3>Task Summary</h3>
@@ -99,7 +96,7 @@
       </table>
     </div>
   </div>
-
+  
   <!-- Firebase and Script Integration -->
   <script type="module" src="https://www.gstatic.com/firebasejs/9.0.0/firebase-app.js"></script>
   <script type="module" src="https://www.gstatic.com/firebasejs/9.0.0/firebase-firestore.js"></script>
